Style spacing and sizing fixes

--- a/public/stylesheets/board-style.css
+++ b/public/stylesheets/board-style.css
@@ -57,15 +57,23 @@ a {
 
 .issue-list-group {
   color: black;
+  margin-bottom: 5px;
   min-height: 70px;
 }
 
 .issue-list-item {
-  margin: 10px;
+  margin: 5px;
   border-radius: 5px;
   font-size: 12px;
   text-align: left;
   overflow: hidden;
+}
+
+.list-group-item {
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 2px;
 }
 
 .board-panel-body {
@@ -76,11 +84,14 @@ a {
 .issue-text {
   height: 100%;
   padding-left: 0px;
+  padding-right: 0px;
 }
 
 .issue-assignee {
   height: 100%;
   padding-right: 0px;
+  padding-left: 0px;
+  width: 21.3%;
 }
 
 .board-panel-heading {
@@ -156,4 +167,16 @@ a {
 
 .heading-container {
   padding-top: 10px;
+}
+
+.col-xs-8 {
+  width: 78.6%;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.board-panel {
+  margin-bottom: 0px;
 }
